--- a/new.html
+++ b/new.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my new repo</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h3>This my new repo</h3>
+    <h3>This my new repo chandged old repo</h3>
     <h4>It is a my new repo of my repocetory</h4>
     <p>
       It is a my new repo of my repocetory.It is a my new repo of my repocetory.It is a my new repo of my repocetory.It is a my
