heading and color changed

--- a/new.html
+++ b/new.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h3>This my new repo chandged old repo</h3>
-    <h4>It is a my new repo of my repocetory</h4>
+    <h4>It is a my new repo of my repocetory chandged to old</h4>
     <p>
       It is a my new repo of my repocetory.It is a my new repo of my repocetory.It is a my new repo of my repocetory.It is a my
       new repo of my repocetory.It is a my new repo of my repocetory.
